<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:background="@drawable/im_ac_setting_background"
              android:layout_height="fill_parent">
    <Button android:background="@drawable/button_ac_settings_back"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:onClick="clickBack"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_marginTop="70dp"
            android:text="dasassad"
            android:visibility="gone"
            android:onClick="clickTestTEst"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
    <ImageView android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:layout_marginTop="10dp"
               android:id="@+id/ac_setting_parent_header"
               android:layout_centerHorizontal="true"
               android:layout_alignParentTop="true"

               android:src="@drawable/im_ac_setting_parent_header"/>
    <TableLayout android:layout_centerHorizontal="true"
                 android:layout_below="@+id/ac_setting_parent_header"
                 android:padding="5dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/button_setting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 >
        <TableRow>
            <TextView   android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:textColor="#6d5105"
                        android:gravity="center_vertical"
                        android:id="@+id/ac_settings_parent_textview_email1"
                        android:textSize="12dp"
                        android:text="@string/settings_parent_email1"/>
            <EditText  android:layout_width="190dp"
                       android:layout_marginLeft="10dp"
                       android:layout_marginRight="10dp"
                       android:layout_height="40dp"
                       android:hint="@string/e_mail"
                       android:id="@+id/ac_settings_parent_edittext_mail"
                       android:textSize="12dp"
                       android:textColor="#6d5105"
                       android:textColorHint="#6d5105"
                       android:gravity="center"
                       android:background="@drawable/im_dialog_request_name_text_field"
                       ></EditText>
        </TableRow>
        <TableRow>
            <TextView   android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#6d5105"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="7dp"
                        android:id="@+id/ac_settings_parent_textview_email2"
                        android:textSize="9dp"
                        android:text="@string/settings_parent_email2"/>

        </TableRow>
        <TableRow>
            <TextView   android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#6d5105"
                        android:textSize="12dp"
                        android:id="@+id/ac_settings_parent_textview_social1"
                        android:gravity="center_vertical"
                        android:text="@string/settings_parent_social1"/>
            <LinearLayout android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
                          android:orientation="horizontal" android:layout_width="wrap_content">
                <Button android:layout_height="wrap_content" android:layout_marginRight="15dp"
                        android:onClick="clickEnterFb"
                        android:layout_width="wrap_content" android:background="@drawable/button_ac_settings_fb"/>
                <Button android:layout_height="wrap_content" android:layout_marginLeft="15dp"
                        android:onClick="clickEnterVk"
                        android:layout_width="wrap_content" android:background="@drawable/button_ac_settings_vk"/>
                <Button android:layout_height="wrap_content" android:layout_marginLeft="15dp"
                        android:onClick="clickGame"
                        android:layout_width="wrap_content" android:text="game"/>
            </LinearLayout>



        </TableRow>
        <TableRow>

            <TextView   android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="9dp"
                        android:layout_marginTop="7dp"
                        android:id="@+id/ac_settings_parent_textview_social2"
                        android:textColor="#6d5105"
                        android:text="@string/settings_parent_social2"/>


        </TableRow>
                 </TableLayout>

</RelativeLayout>